# Projekt-1-semestr

./: CMakeLists.txt  Figure.cpp  Figure.h  FigureSERVICE.cpp  FigureSERVICE.h  Program.cpp  Program.h  README.md  main.cpp
model/: Figure.cpp  Figure.h
service/: CmdSERVICE.cpp  CmdSERVICE.h  FigureSERVICE.cpp  FigureSERVICE.h  cmdSERVICE.cpp  cmdSERVICE.h
